style(header): improve user avatar style and add default initial
- Replace empty Avatar component with one displaying initial "U"
- Set Avatar background color to #1365cf and text color to white
- Adjust Avatar size to 35x35 pixels and add left margin
- Ensure cursor changes to pointer on hover for avatar elements
- Apply consistent styling to both .avtar and .avtar2 CSS classes

--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -127,10 +127,20 @@ header nav .right .cart_btn p{
 
 header nav .avtar{
     cursor: pointer;
+    background-color: #1365cf;
+    color: white;
+    margin-left: 15px;
+    width: 35px;
+    height: 35px;
 }
+
 header nav .avtar2{
     cursor: pointer;
     background-color: #1365cf;
+    color: white;
+    margin-left: 15px;
+    width: 35px;
+    height: 35px;
 }
 
 header .hamburgur{
