refactor(header): replace MUI icons with font-awesome and adjust styles
- Removed Material-UI icon imports and Avatar component in Navbar
- Replaced SearchIcon and ShoppingCartIcon with font-awesome icons
- Updated cart badge to styled span showing item count instead of MUI Badge
- Styled Sign In link and cart button with background colors and z-index for layering
- Replaced Avatar component with a styled div for user icon display
- Updated navbar CSS with !important flags and adjusted background colors and border styles
- Removed unused NewNavbar component from App.js and wrapped Navbar in a div with marginTop 0px

--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -77,7 +77,7 @@ header nav .right{
 }
 
 header nav .right .nav_btn a{
-    color: #fff;
+    color: #fff !important;
     font-weight: 500;
     text-decoration: none;
     margin-right: 2px;
@@ -86,6 +86,7 @@ header nav .right .nav_btn a{
     padding: 8px;
     position: relative;
     z-index: 5;
+    background-color: #febd69 !important;
 }
 
 
@@ -105,6 +106,7 @@ header nav .right .cart_btn{
     align-items: center;
     justify-content: space-between;
     margin-right: 3px;
+    background-color: #131921 !important;
 }
 
 header nav .right .cart_btn:hover{
@@ -131,13 +133,14 @@ header nav .right .cart_btn p{
 
 header nav .avtar{
     cursor: pointer;
-    background-color: #1365cf;
+    background-color: #1365cf !important;
     color: white;
     margin-left: 15px;
     width: 35px;
     height: 35px;
     position: relative;
     z-index: 5;
+    border: 2px solid white !important;
 }
 
 header nav .avtar2{
