feat(navbar): add NewNavbar component and adjust navbar styles
- Import and render NewNavbar alongside the existing Navbar in App component
- Update Navbar CSS: set position fixed with left 0 and increase z-index to 100
- Create newnavbar CSS: set height, background color, margin top and positioning to align below Navbar
- Adjust layout wrappers in App.js to support multiple navbars without extra divs

--- a/client/src/components/newnavbar/newnavbar.css
+++ b/client/src/components/newnavbar/newnavbar.css
@@ -3,7 +3,8 @@
     height: 40px;
     background-color: #232f3e;
     position: relative;
-    top: 60px;
+    top: 0px;
+    margin-top: 60px;
 }
 
 .new_nav .nav_data{
