--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -4,7 +4,8 @@ header{
     height: 60px;
     position: fixed;
     top: 0;
-    z-index:2;
+    left: 0;
+    z-index: 100;
     width: 100%;
 }
 
