--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -74,7 +74,7 @@ header nav .right{
     flex: .3;
 }
 
-header nav .right .nav_btn a{
+header nav .right .nav_btn {
     color: #fff;
     font-weight: 500;
     text-decoration: none;
