style(navbar): enhance signin button and clean CSS formatting
- Wrap signin text in a button element with a click handler placeholder
- Add button-specific styles for appearance and cursor interaction
- Fix inconsistent spacing and indentation throughout navbar CSS
- Add missing spaces after selectors and properties for readability
- Improve media query formatting for responsive layout adjustments
- Hide certain navbar elements on smaller screen widths for better UX

--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -1,14 +1,14 @@
-header{
+header {
     background-color: #131921;
-    width:100%;
+    width: 100%;
     height: 60px;
     position: fixed;
     top: 0;
-    z-index:2;
+    z-index: 2;
     width: 100%;
 }
 
-header nav{
+header nav {
     width: 100%;
     margin: auto;
     height: 100%;
@@ -18,14 +18,14 @@ header nav{
     z-index: 4;
 }
 
-header nav .navlogo img{
+header nav .navlogo img {
     width: 110px;
     margin-top: 10px;
 }
 
-header nav .left{
+header nav .left {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
     /* border: 2px solid red; */
     flex: .7;
@@ -33,8 +33,8 @@ header nav .left{
 
 
 
-header nav .left input{
-    width:400px;
+header nav .left input {
+    width: 400px;
     height: 38px;
     border: none;
     outline: none;
@@ -44,7 +44,7 @@ header nav .left input{
     padding-left: 10px;
 }
 
-header nav .left .search_icon{
+header nav .left .search_icon {
     background-color: #febd69;
     height: 40px;
     width: 40px;
@@ -56,7 +56,7 @@ header nav .left .search_icon{
     cursor: pointer;
 }
 
-header nav .nav_searchbar{
+header nav .nav_searchbar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,31 +66,35 @@ header nav .nav_searchbar{
     border: 2px solid #febd69;
 } */
 
-header nav .right{
+header nav .right {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     /* border: 2px solid red; */
     flex: .3;
 }
 
-header nav .right .nav_btn {
+.nav_btn button {
+    background: none;
+    border: none;
     color: #fff;
+    font: inherit;
     font-weight: 500;
     text-decoration: none;
     margin-right: 2px;
     border: 1px solid #131921;
     border-radius: 2px;
     padding: 8px;
+    cursor: pointer;
 }
 
 
 
-header nav .right .nav_btn a:hover{
+header nav .right .nav_btn a:hover {
     border: 1px solid white;
 }
 
-header nav .right .cart_btn{
+header nav .right .cart_btn {
     display: flex;
     margin-left: 22px;
     cursor: pointer;
@@ -103,17 +107,17 @@ header nav .right .cart_btn{
     margin-right: 3px;
 }
 
-header nav .right .cart_btn:hover{
+header nav .right .cart_btn:hover {
     border: 1px solid white;
 }
 
-header nav .right .cart_btn #icon{
+header nav .right .cart_btn #icon {
     margin-right: 10px;
     color: #fff;
     margin-top: 2px;
 }
 
-header nav .right .cart_btn p{
+header nav .right .cart_btn p {
     color: #fff;
     font-weight: 500;
     font-size: 12px;
@@ -121,23 +125,24 @@ header nav .right .cart_btn p{
     margin-right: 10px;
 }
 
-.right a{
+.right a {
     text-decoration: none;
 }
 
-header nav .avtar{
+header nav .avtar {
     cursor: pointer;
 }
-header nav .avtar2{
+
+header nav .avtar2 {
     cursor: pointer;
     background-color: #1365cf;
 }
 
-header .hamburgur{
+header .hamburgur {
     display: none;
 }
 
-header .extrasearch{
+header .extrasearch {
     position: absolute;
     background-color: #fff;
     color: #000;
@@ -145,59 +150,63 @@ header .extrasearch{
     width: 440px;
 }
 
-header .extrasearch a{
+header .extrasearch a {
     text-decoration: none;
     color: #000;
 }
 
 /* drawer sty */
-header nav .drawer{
+header nav .drawer {
     width: 250px;
     background-color: red;
 }
 
 
-@media (max-width:800px){
-    header .hamburgur{
+@media (max-width:800px) {
+    header .hamburgur {
         display: block;
     }
-    header nav{
+
+    header nav {
         overflow: hidden;
     }
+
     header nav .right .nav_btn,
     header nav .right .avtar2,
-    header nav .right .avtar{
-        display:none;
+    header nav .right .avtar {
+        display: none;
     }
-    header nav .left input{
+
+    header nav .left input {
         width: 150px;
         margin-left: 10px;
     }
 
-    header nav .left input::placeholder{
+    header nav .left input::placeholder {
         visibility: hidden;
     }
-  
-    header nav .right .cart_btn{
+
+    header nav .right .cart_btn {
         margin-right: 0;
     }
-    
-    
+
+
 }
 
-@media (max-width:568px){
+@media (max-width:568px) {
 
-    header nav .left input{
-       display: none;
+    header nav .left input {
+        display: none;
     }
-    
-    header nav .left .search_icon{
+
+    header nav .left .search_icon {
         /* color: #fff;
         font-size: 18px;
         background-color: #131921; */
         display: none;
     }
-    header nav .navlogo img{
+
+    header nav .navlogo img {
         width: 95px;
         margin-top: 14px;
         margin-left: 67px;
