--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -14,6 +14,21 @@
     height: 280px;
 }
 
+.embla {
+    overflow: hidden;
+    height: 100%;
+}
+
+.embla__container {
+    display: flex;
+    height: 100%;
+}
+
+.embla__slide {
+    min-width: 100%;
+    position: relative;
+}
+
 .banner-slide {
     width: 100%;
     height: 280px;
@@ -26,6 +41,8 @@
     transform: translateY(-50%);
     z-index: 10;
     background-color: rgba(255, 255, 255, 0.7) !important;
+    width: 40px;
+    height: 40px;
 }
 
 .carousel-arrow:hover {
@@ -61,4 +78,10 @@
 
 .carousel-dot.active {
     background-color: #fff;
+}
+
+/* Disabled button styles */
+.carousel-arrow:disabled {
+    background-color: rgba(255, 255, 255, 0.3) !important;
+    cursor: not-allowed;
 }
