--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -8,24 +8,22 @@
     margin-bottom: 10px;
 }
 
-.embla {
-    overflow: hidden;
+.banner-container {
     width: 100%;
-}
-
-.embla__container {
-    display: flex;
-    will-change: transform;
-}
-
-.embla__slide {
-    position: relative;
-    flex: 0 0 100%;
-    min-width: 0;
+    margin: 0 auto;
 }
 
 .banner_img {
     width: 100%;
     height: auto;
     display: block;
+}
+
+.slick-slider {
+    width: 100%;
+}
+
+.slick-slide img {
+    width: 100%;
+    height: auto;
 }
